# clicker

./: .gitignore  anticaptcha_solver.py  build_report_summary.py  centers.txt  combine_keywords.py  generate_keywords.py  keywords_eecglobal.csv  keywords_ptetest.csv  keywords_unified.csv  keywords_wings.csv  main.py  main_eecglobal.py  merge_keywords.py  pyproject.toml  run_forever.sh  test_shutdown2.py  test_sig.py
Report/: results_log_1.csv  summary.csv
Report_eecglobal/: results_log_eecglobal_1.csv  results_log_eecglobal_2.csv  summary.csv
